Changelog
=========

1.1.2 (unreleased)
------------------

- Set input/output mime type of the addition_css text area to text/plain.
  Also return the addional_css as structured text.
  [mathias.leimgruber]


1.1.1 (2013-06-03)
------------------

- Use logo image scale for logo instead of mini.
  [Julian Infanger]

- Updated translations for teaser portlet.
  [Julian Infanger]


1.1 (2013-05-24)
----------------

- Move subsite css viewlet into plone.portaltop manager.
  [mathias.leimgruber]

- Use plone default reference widget to make references between
  subsites (lanaguage selector).
  [mathias.leimgruber]

- Find banner images recursively.
  [mathias.leimgruber]


1.0 (2013-04-17)
----------------

- inital release